add filters for attendance report by status and search criteria